--- a/boiler_weather_compensation.yaml
+++ b/boiler_weather_compensation.yaml
@@ -35,27 +35,18 @@ blueprint:
 
     boiler_climate:
       name: "Boiler / Heating Climate Entity"
-      description: "Climate entity used to set the boiler flow temperature. Leave default if using the number entity override below."
-      default: ""
+      description: "Climate entity for the boiler. Always required — used for HVAC mode (on/off). Temperature is also set here unless the number entity override below is configured."
       selector:
         entity:
           domain: climate
 
     boiler_number_entity:
-      name: "Boiler Flow Temp Number Entity (alternative)"
-      description: "Use this instead of the climate entity when the climate integration caps the temperature too low. E.g. number.e3_vitodens_100_hc_0122_normal_temperature. When set, the climate entity above is ignored."
+      name: "Boiler Flow Temp Number Entity (optional override)"
+      description: "When set, flow temperature is written to this number entity instead of the climate entity (bypasses any temperature cap in the climate integration). HVAC on/off still goes through the climate entity above. E.g. number.e3_vitodens_100_hc_0122_normal_temperature"
       default: ""
       selector:
         entity:
           domain: number
-
-    boiler_mode_helper:
-      name: "Boiler HVAC Mode Helper (required with number entity)"
-      description: "An input_boolean that tracks heating on/off when using the number entity (which has no native HVAC mode). Create via Settings → Helpers → Toggle."
-      default: ""
-      selector:
-        entity:
-          domain: input_boolean
 
     # ── Heat curve anchor points ──────────────────────────────────────────
     design_outdoor_temp:
@@ -361,7 +352,6 @@ action:
       demand_integral_entity: !input demand_integral_helper
       boiler_climate_entity: !input boiler_climate
       boiler_number: !input boiler_number_entity
-      boiler_mode_entity: !input boiler_mode_helper
       use_number_mode: "{{ boiler_number | default('', true) | length > 0 }}"
 
   # ── Check sensor availability before proceeding ────────────────────────
@@ -525,12 +515,7 @@ action:
         {% else %}
           {{ state_attr(boiler_climate_entity, 'temperature') | float(0) }}
         {% endif %}
-      current_mode: >-
-        {% if use_number_mode %}
-          {% if is_state(boiler_mode_entity, 'on') %}heat{% else %}off{% endif %}
-        {% else %}
-          {{ states(boiler_climate_entity) }}
-        {% endif %}
+      current_mode: "{{ states(boiler_climate_entity) }}"
       change_big_enough: "{{ (target_flow | int - current_setpoint | int) | abs >= min_change | int }}"
       # Should we turn off? (outdoor warm enough OR calculated flow ≤ minimum)
       should_heat_off: "{{ t_out | float >= t_off | float or target_flow_raw | float <= flow_min | float }}"
@@ -561,24 +546,11 @@ action:
           - condition: template
             value_template: "{{ t_out | float >= t_off | float }}"
         sequence:
-          - if:
-              - condition: template
-                value_template: "{{ use_number_mode }}"
-            then:
-              - service: number.set_value
-                target:
-                  entity_id: "{{ boiler_number }}"
-                data:
-                  value: "{{ flow_min }}"
-              - service: input_boolean.turn_off
-                target:
-                  entity_id: "{{ boiler_mode_entity }}"
-            else:
-              - service: climate.set_hvac_mode
-                target:
-                  entity_id: "{{ boiler_climate_entity }}"
-                data:
-                  hvac_mode: "off"
+          - service: climate.set_hvac_mode
+            target:
+              entity_id: "{{ boiler_climate_entity }}"
+            data:
+              hvac_mode: "off"
           - service: system_log.write
             data:
               message: >-
@@ -590,24 +562,11 @@ action:
           - condition: template
             value_template: "{{ flow_below_min }}"
         sequence:
-          - if:
-              - condition: template
-                value_template: "{{ use_number_mode }}"
-            then:
-              - service: number.set_value
-                target:
-                  entity_id: "{{ boiler_number }}"
-                data:
-                  value: "{{ flow_min }}"
-              - service: input_boolean.turn_off
-                target:
-                  entity_id: "{{ boiler_mode_entity }}"
-            else:
-              - service: climate.set_hvac_mode
-                target:
-                  entity_id: "{{ boiler_climate_entity }}"
-                data:
-                  hvac_mode: "off"
+          - service: climate.set_hvac_mode
+            target:
+              entity_id: "{{ boiler_climate_entity }}"
+            data:
+              hvac_mode: "off"
           - service: system_log.write
             data:
               message: >-
@@ -636,9 +595,11 @@ action:
               entity_id: "{{ boiler_number }}"
             data:
               value: "{{ target_flow }}"
-          - service: input_boolean.turn_on
+          - service: climate.set_hvac_mode
             target:
-              entity_id: "{{ boiler_mode_entity }}"
+              entity_id: "{{ boiler_climate_entity }}"
+            data:
+              hvac_mode: heat
         else:
           - service: climate.set_temperature
             target:
