--- a/boiler_weather_compensation.yaml
+++ b/boiler_weather_compensation.yaml
@@ -324,6 +324,7 @@ trigger:
   # Periodic re-evaluation
   - platform: time_pattern
     minutes: "/5"
+    id: periodic
 
   # React to outdoor temperature changes (debounced — wait 5 min of stable value)
   - platform: state
@@ -497,17 +498,25 @@ action:
           {{ [(-1 * demand_i_max | float), [new_val, demand_i_max | float] | min] | max | round(1) }}
         {% endif %}
 
-  # ── Write solar accumulator back to helper ─────────────────────────────
-  - service: input_number.set_value
-    target:
-      entity_id: !input solar_accumulator_helper
-    data:
-      value: "{{ solar_offset }}"
-
-  # ── Write demand I-term accumulator back to helper (if configured) ─────
+  # ── Write solar accumulator back to helper (only on periodic trigger) ───
   - if:
-      - condition: template
-        value_template: "{{ demand_integral_entity | default('', true) | length > 0 }}"
+      - condition: trigger
+        id: periodic
+    then:
+      - service: input_number.set_value
+        target:
+          entity_id: !input solar_accumulator_helper
+        data:
+          value: "{{ solar_offset }}"
+
+  # ── Write demand I-term accumulator back to helper (only on periodic trigger) ─
+  - if:
+      - condition: and
+        conditions:
+          - condition: trigger
+            id: periodic
+          - condition: template
+            value_template: "{{ demand_integral_entity | default('', true) | length > 0 }}"
     then:
       - service: input_number.set_value
         target:
